--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@vercel/og": "^0.2.0",
+    "clsx": "^1.2.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "framer-motion": "^10.0.1",
     "next": "13.1.6",
     "nextra": "^2.2.15",
     "nextra-theme-docs": "^2.2.15",
