--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-next": "13.1.6",
     "framer-motion": "^10.0.1",
     "next": "13.1.6",
+    "nextjs-google-analytics": "^2.3.3",
     "nextra": "^2.2.15",
     "nextra-theme-docs": "^2.2.15",
     "react": "18.2.0",
